--- a/src/BlazorTemplate.Server/Pages/_Layout.cshtml
+++ b/src/BlazorTemplate.Server/Pages/_Layout.cshtml
@@ -38,10 +38,10 @@
     <script type="text/javascript" src="_content/BlazorTemplate.Components/js/highlight-extensions.js"></script>
 
     <!-- perspective -->
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@@finos/perspective/dist/cdn/perspective.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@@finos/perspective-viewer/dist/cdn/perspective-viewer.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@@finos/perspective-viewer-datagrid/dist/cdn/perspective-viewer-datagrid.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@@finos/perspective-viewer-d3fc/dist/cdn/perspective-viewer-d3fc.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@@finos/perspective@2.7.1/dist/cdn/perspective.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@@finos/perspective-viewer@2.7.1/dist/cdn/perspective-viewer.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@@finos/perspective-viewer-datagrid@2.7.1/dist/cdn/perspective-viewer-datagrid.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@@finos/perspective-viewer-d3fc@2.7.1/dist/cdn/perspective-viewer-d3fc.js"></script>
 
-</body>
+    </body>
 </html>
